# salesforce-skill

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .shellcheckrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SKILL.md  TROUBLESHOOTING.md  config.example.yaml  install.sh  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.sh  verify-install.sh
.claude/notes/: agent-architecture-research.md  agent-examples.md  agent-model-selection-facts.md  agent-recommendations.md  dependency-analysis-task.md
.github/workflows/: test-skill.yml
assets/: apex-test-template.cls  package-xml-template.xml  salesforce-ci.yml  validate-pr.yml
examples/: README.md
examples/apex/: sample-test-class.cls
examples/outputs/: org-comparison-example.md  query-output-example.md
examples/scripts/: data-export-workflow.sh  deployment-workflow.sh
examples/soql/: aggregate-query.soql  basic-account-query.soql  date-filtering.soql  relationship-query.soql
lib/: report-manager.sh
references/: common-errors.md  data-migration-guide.md  deployment-guide.md  duplicate-detection.md  governor-limits.md  metadata-types.md  performance-tuning.md  rollback-procedures.md  sf-cli-reference.md  soql-patterns.md  testing-guide.md
scripts/: README.md  analyze_apex_performance.py  compare-reports.sh  compare_orgs.sh  compare_orgs_and_report.sh  deploy_and_test.sh  emergency_rollback.py  export_data.py  find_duplicates.py  find_slow_queries.sh  list-reports.sh  org_health_check.py  org_limits_monitor.py  profile_soql.py  query_soql.py  retrieve_metadata.sh  rollback_deployment.sh  run_tests.py  seed_scratch_org.sh  snapshot_org.sh  validate_field_writeability.py  validate_visualforce.py  view-latest-report.sh
tests/: __init__.py  run-all-tests.sh
tests/fixtures/: sample_org_limits.json  sample_soql_response.json
tests/integration/: test_help_flags.sh  test_scripts_executable.sh
tests/unit/: __init__.py  test_query_soql.py  test_validate_field_writeability.py  test_validate_visualforce.py
